# dasom-gtk

./: .gitignore  Makefile.am  NEWS  README  configure.ac
agents/app-indicator/: dasom-indicator.c
agents/gnome-shell-extension/: metadata.json.in
data/im-config/: 70_dasom.conf
debian/: changelog  control  copyright
libdasom/: Makefile.am  dasom-candidate.c  dasom-engine.c  dasom-events.h  dasom-im.c  dasom-server.c  org.freedesktop.Dasom.gschema.xml
modules/: Makefile.am
modules/engines/: Makefile.am
po/: POTFILES.in  ko.po
src/: Makefile.am  im-dasom.c
